[MIPS] Test warp fails on MIPS
Categories
(Core :: JavaScript Engine: JIT, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox136 | --- | fixed | 
People
(Reporter: chenx97, Assigned: chenx97)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
Steps to reproduce:
run ./mach jit-test warp on MIPS hardware
Actual results:
Assertion failure: from.floatReg() != ScratchFloat32Reg, at /mozilla-unified/js/src/jit/mips-shared/MoveEmitter-mips-shared.cpp:128
FAIL - warp/float16-as-float32-specialization-for-float16array-hole.js
/mozilla-unified/js/src/jit-test/tests/warp/bug1688346.js:12:9 Error: Assertion failed: got 0, expected NaN
Stack:
@/mozilla-unified/js/src/jit-test/tests/warp/bug1688346.js:12:9
Expected results:
The tests should pass
We don't need to make sure the source and/or destination is not the
ScratchFloat32Reg:
- from ScratchFloat32Reg: it doesn't need to hold intermediate values during the
move. At most a scratch GPR will be used by storeFloat32. - to ScratchFloat32Reg: holding intermediate values during the move won't matter.
The final move or load operation will give it the desired value. 
          Updated•10 months ago
           
         | 
      
This patch avoids depending on the scratch register's value after a few
macroassembler operations.
          Updated•10 months ago
           
         | 
      
https://hg.mozilla.org/mozilla-central/rev/e7009c553020
https://hg.mozilla.org/mozilla-central/rev/4f69cb6d1d22
Description
•