Bug 1939215 - [MIPS] Fix bail behavior when truncating numbers. r=anba

This patch avoids depending on the scratch register's value after a few
macroassembler operations.

Differential Revision: https://phabricator.services.mozilla.com/D232920